// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DiffReport Tests Correctly displays added dependencies: stderr 1`] = `Array []`;

exports[`DiffReport Tests Correctly displays added dependencies: stdout 1`] = `
Array [
  "Dependency Diff: medallo@1.0.0 (0/0) -> medallo@2.0.0 (2/2)",
  "Direct Dependencies Δ: +2",
  "All Dependencies Δ:    +2",
  "",
  "    a added1@1.2.3 (0)",
  "    a added2@1.2.3 (0)",
  "",
  "(a)dded (c)hanged (r)emoved (u)nchanged",
  "",
  "",
]
`;

exports[`DiffReport Tests Correctly displays removed dependencies: stderr 1`] = `Array []`;

exports[`DiffReport Tests Correctly displays removed dependencies: stdout 1`] = `
Array [
  "Dependency Diff: medallo@1.0.0 (2/2) -> medallo@2.0.0 (0/0)",
  "Direct Dependencies Δ: -2",
  "All Dependencies Δ:    -2",
  "",
  "    r removed1@1.2.3 (0)",
  "    r removed2@1.2.3 (0)",
  "",
  "(a)dded (c)hanged (r)emoved (u)nchanged",
  "",
  "",
]
`;

exports[`DiffReport Tests Correctly displays unchanged dependencies: stderr 1`] = `Array []`;

exports[`DiffReport Tests Correctly displays unchanged dependencies: stdout 1`] = `
Array [
  "Dependency Diff: medallo@1.0.0 (2/2) -> medallo@2.0.0 (2/2)",
  "Direct Dependencies Δ: 0",
  "All Dependencies Δ:    0",
  "",
  "    u unchanged1@1.0.0 (0)",
  "    u unchanged2@1.0.0 (0)",
  "",
  "(a)dded (c)hanged (r)emoved (u)nchanged",
  "",
  "",
]
`;

exports[`DiffReport Tests Correctly displays upgraded dependencies: stderr 1`] = `Array []`;

exports[`DiffReport Tests Correctly displays upgraded dependencies: stdout 1`] = `
Array [
  "Dependency Diff: medallo@1.0.0 (2/2) -> medallo@2.0.0 (2/2)",
  "Direct Dependencies Δ: 0",
  "All Dependencies Δ:    0",
  "",
  "    c dep1@1.2.3 (0) -> dep1@4.5.6 (0)",
  "    c dep2@1.2.3 (0) -> dep2@4.5.6 (0)",
  "",
  "(a)dded (c)hanged (r)emoved (u)nchanged",
  "",
  "",
]
`;

exports[`DiffReport Tests works: stderr 1`] = `Array []`;

exports[`DiffReport Tests works: stdout 1`] = `
Array [
  "Dependency Diff: react@16.12.0 (3/8) -> react@18.2.0 (1/2)",
  "Direct Dependencies Δ: -2",
  "All Dependencies Δ:    -6",
  "",
  "    u loose-envify@1.4.0 (1)",
  "    r object-assign@4.1.1 (0)",
  "    r prop-types@15.8.1 (4)",
  "",
  "(a)dded (c)hanged (r)emoved (u)nchanged",
  "",
  "",
]
`;
